config: add iconographic to app

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,6 +12,10 @@
   </ion-header>
 
   <div id="container">
+    <ion-icon name="home"></ion-icon>
+    <br />
+    <ion-icon name="alarm-outline"></ion-icon>
+    <br />
     <strong>Ready to create an app?</strong>
     <p>
       Start with Ionic
