feat: add iteraction service, show an alert message with one button or two button, show a toast depending on the arguments sent

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,6 +17,10 @@
     <ion-icon name="alarm-outline"></ion-icon>
     <br />
     <strong>Ready to create an app?</strong>
+
+    <br />
+    <ion-button (click)="save()" shape="round">Guardar</ion-button>
+
     <p>
       Start with Ionic
       <a
