--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,19 +7,20 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
+      <ion-title size="large">Blank</ion-title>
       <ion-title size="large">Hola mundo</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <ion-icon name="home"></ion-icon>
+    <!-- <ion-icon name="home"></ion-icon>
     <br />
     <ion-icon name="alarm-outline"></ion-icon>
-    <br />
+    <br /> -->
     <strong>Ready to create an app?</strong>
 
     <br />
-    <ion-button (click)="save()" shape="round">Guardar</ion-button>
+    <!-- <ion-button (click)="save()" shape="round">Guardar</ion-button>  -->
 
     <p>
       Start with Ionic
